# knotpy

./: .buildinfo  .gitignore  INSTALL.md  LICENCE.txt  README.md  TODO.txt  genindex.html  index.html  install.html  main-generate.py  main-level.py  main-networkx.py  main.py  objects.inv  playground.ipynb  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  sg_execution_times.html  tutorial.html
.doctrees/: environment.pickle  index.doctree  install.doctree  sg_execution_times.doctree  tutorial.doctree
auto_examples/: index.html  sg_execution_times.html
docs/: .gitignore  README.md  conf.py  index.rst  install.rst  requirements.txt  tutorial.rst
examples/: README.rst  index.html
gallery/: index.html
knotpy/: TODO.txt  __init__.py  _settings.py  _temp_knots.csv  combinatorics.py  convert.py  generators.py  lookup.py  sanity.py  test-type.py  test_knot_table.csv  views.py
logo/: logo-ideas.ai
old/: CirclePack2.py  HOMFLYPT.py  circlepack.py  combinatorics.py  crossing.py  drawknot.py  equivalence.py  graph.py  invariant_bucket.py  knotted.py  main_draw_knot_table.py  main_generate_graphs.py  main_tabulation.py  main_test.py  module.py  paper_knots.py  planar_graph.py  protdb.py  reidemeister_moves.py  reidemeister_walk.py  skein.py  t_invariant.py  test_knots.py  test_prot.py  test_reidemeister.py  timer.py
reference/: index.html
sandbox/: diagram_counter.py  handcuff_bartosz.py  ideas.txt  knotoid_classification.py
test/: test-net.py  test_descriptor.py
tests/: docstrings.py  main-matplotlib.py  test-comapre.py  test.py  (+5 more)
(+514 files in other folders)
